package hesge.legrand.tb.chatbot.helper;

public final class Credentials {

    /* Watson Natural Language Understanding Informations */
    public final static String NLU_APIKEY = "7LMCIUQHS8y5URF3NcFDtbto8pnj2SfbTOT5rEKFPj1l";
    public final static String NLU_API_URL = "https://gateway-lon.watsonplatform.net/natural-language-understanding/api";
    public final static String NLU_VERSION = "2019-05-01";

    /* Watson Assistant Informations */
    public final static String ASSISTANT_ID = "81237f13-6984-4f8a-956b-c537b0b3c2d6";
    public final static String ASSISTANT_APIKEY = "uGt_uns_Sds1olKf_kG4CRh6ILkJKlrZYUlHR9SwVPmE";
    public final static String ASSISTANT_API_URL = "https://gateway-lon.watsonplatform.net/assistant/api";
    public final static String ASSISTANT_VERSION = "2019-03-31";

}
