package hesge.legrand.tb.education.model;

/**
 * This enum lists all the themes the chatbot can ask questions about
 */
public enum Theme {
    COMPUTER_SCIENCE,
    ECONOMICS,
    CIVIL_ENGINEERING,
    OENOLOGY
}
