@startuml

title __CHATBOT-TB's Class Diagram__\n

  package  {
    package hesge.legrand.tb.chatbot {
      package hesge.legrand.tb.chatbot.helper {
        class Constants {
        }
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.chatbot {
      package hesge.legrand.tb.chatbot.helper {
        class Credentials {
        }
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.chatbot {
      package hesge.legrand.tb.chatbot.conversation {
        class EducativeChatbot {
        }
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.education {
      class Initializer {
      }
    }
  }
  

  package  {
    class JspClass {
    }
  }
  

  package  {
    package hesge.legrand.tb.chatbot {
      package hesge.legrand.tb.chatbot.conversation {
        package hesge.legrand.tb.chatbot.conversation.model {
          class NaturalLanguageUnderstandingModule {
          }
        }
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.education {
      package hesge.legrand.tb.education.model {
        class Question {
        }
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.chatbot {
      class StartService {
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.education {
      package hesge.legrand.tb.education.model {
        enum Theme {
        }
      }
    }
  }
  

  package  {
    package hesge.legrand.tb.chatbot {
      package hesge.legrand.tb.chatbot.conversation {
        package hesge.legrand.tb.chatbot.conversation.model {
          class WatsonAssistantModule {
          }
        }
      }
    }
  }
  

  EducativeChatbot o-- WatsonAssistantModule : assistant
  JspClass -up-|> HttpJspPage
  Question o-- Theme : theme
  WatsonAssistantModule o-- NaturalLanguageUnderstandingModule : nlu


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
